first html version

--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>
+        Erfan Sadraiye
+    </title>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.5.1/github-markdown-light.min.css"
+        integrity="sha512-Pmhg2i/F7+5+7SsdoUqKeH7UAZoVMYb1sxGOoJ0jWXAEHP0XV2H4CITyK267eHWp2jpj7rtqWNkmEOw1tNyYpg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        .markdown-body {
+            box-sizing: border-box;
+            min-width: 200px;
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 45px;
+        }
+
+        @media (max-width: 767px) {
+            .markdown-body {
+                padding: 15px;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <article class="markdown-body">
+        <h1>Erfan Sadraiye's CV</h1>
+        <ul>
+        <li>Phone: +98 933 742 3153</li>
+        <li>Email: <a href="mailto:sadraiyeh.e2002@gmail.com">sadraiyeh.e2002@gmail.com</a></li>
+        <li>GitHub: <a href="https://github.com/erfansadraiye">erfansadraiye</a></li>
+        </ul>
+        <h1>Education</h1>
+        <h2>Sharif University of Technology, BS in Computer Engineering</h2>
+        <ul>
+        <li>Sept 2020 – May 2025</li>
+        <li>GPA: 19.77/20.0 (4.0/4.0) (<a href="https://edu.sharif.edu/v/99101835/4226F13ACC2878C6C67AF440841A8457/pdf">Transcript</a>)</li>
+        <li>Ranked in the Top 3 out of 192 students</li>
+        </ul>
+        <h2>Allame Helli 10 High School, Diploma in Mathematics and Physic</h2>
+        <ul>
+        <li>Sept 2016 – May 2020</li>
+        <li>GPA: 19.7/20.0</li>
+        </ul>
+        <h1>Professional Experience</h1>
+        <h2><a href="http://ipl.ce.sharif.edu">Image Processing Lab</a> at SUT, Undergraduate Research Assistant</h2>
+        <ul>
+        <li>Jan 2024 – present</li>
+        <li>Supervised by: <a href="https://scholar.google.com/citations?user=mvx4PvgAAAAJ&amp;hl=en">Prof. Shohreh Kasaei</a></li>
+        <li>Research Topics: Style Transfer in 3D Point Clouds</li>
+        <li>Conducted in-depth research on style transfer in 3D point clouds, with a focus on developing advanced deep learning models and architectures. Experimented with a variety of models across diverse datasets, writing and optimizing training code to enhance performance. Incorporated insights from cutting-edge research to improve model robustness and efficiency, and currently preparing a comprehensive paper to present our findings.</li>
+        </ul>
+        <h2>Natural Language Processing Lab at SUT, Undergraduate Research Assistant</h2>
+        <ul>
+        <li>May 2023 – June 2024</li>
+        <li>Supervised by: <a href="https://scholar.google.com/citations?hl=en&amp;user=lIVvIFsAAAAJ">Dr. Ehsaneddin Asgari</a></li>
+        <li>Research Topics: Text to 3D Human Pose</li>
+        <li>Conducted research on converting text descriptions to 3D human poses by downloading, configuring, and evaluating various models; contributed to a survey paper synthesizing academic findings, and presented key methodologies and results to the lab group while participating in discussions on improving model accuracy and exploring new approaches.</li>
+        </ul>
+        <h2>Smartech, Data Software Engineer</h2>
+        <ul>
+        <li>Aug 2022 – Sept 2024</li>
+        <li>Led a team in developing a Real-Time Bidding (RTB) module with several key functions to enhance campaign performance.</li>
+        <li>Applied AI/ML models for various tasks, including predicting optimal prices for auction participation.</li>
+        <li>Worked with different tools such as Elasticsearch, Redis, Kafka and etc.</li>
+        </ul>
+        <h2>Sharif University of Technology, Volunteer Teacher Assistant</h2>
+        <ul>
+        <li>Sept 2020 – present</li>
+        <li><strong>Artificial Intelligence (TA for 4 semesters)</strong>| M.H. Rohban &amp; M. Soleymani</li>
+        <li><strong>Machine Learning</strong>| A. Motahari</li>
+        <li><strong>Machine Learning</strong>| S.F. Seyyed Salehi</li>
+        <li><strong>Modern Information Retrieval</strong>| M. Soleymani</li>
+        <li><strong>Engineering Probability and Statistics</strong>| Dr. A. Sharifi-Zarchi</li>
+        <li><strong>Linear Algebra</strong>| Dr. H.R. Rabiee &amp; Dr. M. Ramezani</li>
+        </ul>
+        <h1>Honors and Awards</h1>
+        <p><strong>59</strong>th in the Nationwide University Entrance Exam among over 160,000</p>
+        <h1>Research Interests</h1>
+        <ul>
+        <li><strong>Computer Vision</strong>, <strong>Natural Language Processing</strong>, <strong>Multimodal Learning</strong>, <strong>Applied AI/ML</strong>, <strong>Robotics</strong></li>
+        </ul>
+        <h1>Related Coursework</h1>
+        <ul>
+        <li><strong>Machine Learning (Graduate)</strong>, <strong>Natural Language Processing(Graduate)</strong></li>
+        <li>Artificial Intelligence, Linear Algebra, Probability &amp; Statistics, Data Structures &amp; Algorithms, Operating Systems, Computer Simulation, Database Design</li>
+        </ul>
+        <h1>Projects</h1>
+        <h2>Formal/Informal Persian Conversion - NLP Course Final Project</h2>
+        <ul>
+        <li><a href="https://github.com/NLP-Final-Projects/FormalInformalPersian">Github</a></li>
+        <li>Developed an NLP model to convert informal Persian to formal Persian and vice versa, improving linguistic fluency by bridging the gap between different language styles in written text.</li>
+        <li>Tools Used: PyTorch</li>
+        </ul>
+        <h2>Recognize Text Detoxification - NLP Course Project</h2>
+        <ul>
+        <li><a href="https://github.com/erfansadraiye/Text-Detoxification">Github</a></li>
+        <li>Fine-tuned a transformer-based model to classify text for toxicity. The model was further trained to analyze each word and indicate its level of toxicity.</li>
+        <li>Tools Used: PyTorch</li>
+        </ul>
+        <h2>Rock Paper Scissors: Hand Gesture Edition - Embedded System Course Project</h2>
+        <ul>
+        <li><a href="https://github.com/erfansadraiye/Rock-Paper-Scissors/tree/master">Github</a></li>
+        <li>Developed a tournament-style Rock-Paper-Scissors game using the ESP32CAM module, implementing OpenCV-based real-time hand gesture recognition and creating an adaptive AI opponent that learns player patterns to increase difficulty.</li>
+        <li>Tools Used: Python, OpenCV, ESP32CAM, PyTorch (for AI learning model)</li>
+        </ul>
+        <h1>Skills</h1>
+        <h2>Languages</h2>
+        <ul>
+        <li><strong>English</strong>: Advanced, TOEFL iBT: 105 (R:28 L:29 S:23 W:25)</li>
+        <li><strong>Persian</strong>: Native</li>
+        </ul>
+        <h2>Programming</h2>
+        <ul>
+        <li><strong>Proficient Languages</strong>: Python, R, Kotlin/Java, SQL, C/C++, Shell, LateX</li>
+        <li><strong>Libraries</strong>: PyTorch, TensorFlow, Pandas, NumPy, Scikit-Learn</li>
+        <li><strong>Technologies/Tools</strong>: Git, Docker, Spring Boot, Elasticsearch, Redis, Apache Kafka, PostgreSQL</li>
+        </ul>
+        <h2>Extracurricular Activities</h2>
+        <ul>
+        <li>Football, Video Games, Swimming</li>
+        </ul>
+        <h2>Soft Skills</h2>
+        <ul>
+        <li>Communication, Teamwork, Problem-solving, Flexibility</li>
+        </ul>
+    </article>
+</body>
+
+</html>
