--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <article class="markdown-body">
-        <h1>Erfan Sadraiye's CV</h1>
+        <h1>Erfan Sadraiye</h1>
         <ul>
         <li>Phone: +98 933 742 3153</li>
         <li>Email: <a href="mailto:sadraiyeh.e2002@gmail.com">sadraiyeh.e2002@gmail.com</a></li>
