--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <li>Research Topics: Style Transfer in 3D Point Clouds</li>
         <li>Conducted in-depth research on style transfer in 3D point clouds, with a focus on developing advanced deep learning models and architectures. Experimented with a variety of models across diverse datasets, writing and optimizing training code to enhance performance. Incorporated insights from cutting-edge research to improve model robustness and efficiency, and currently preparing a comprehensive paper to present our findings.</li>
         </ul>
-        <h2>Natural Language Processing Lab at SUT, Undergraduate Research Assistant</h2>
+        <h2>Natural Language Processing Lab, Undergraduate Research Assistant</h2>
         <ul>
-        <li>May 2023 – June 2024</li>
+        <li>May 2023 – present</li>
         <li>Supervised by: <a href="https://scholar.google.com/citations?hl=en&amp;user=lIVvIFsAAAAJ">Dr. Ehsaneddin Asgari</a></li>
         <li>Research Topics: Text to 3D Human Pose</li>
         <li>Conducted research on converting text descriptions to 3D human poses by downloading, configuring, and evaluating various models; contributed to a survey paper synthesizing academic findings, and presented key methodologies and results to the lab group while participating in discussions on improving model accuracy and exploring new approaches.</li>
@@ -68,6 +68,7 @@
         <ul>
         <li>Aug 2022 – Sept 2024</li>
         <li>Led a team in developing a Real-Time Bidding (RTB) module with several key functions to enhance campaign performance.</li>
+        <li>Developed a search ads system using a recommendation system within the RTB module, improving ad relevance, user targeting, and campaign performance.</li>
         <li>Applied AI/ML models for various tasks, including predicting optimal prices for auction participation.</li>
         <li>Worked with different tools such as Elasticsearch, Redis, Kafka and etc.</li>
         </ul>
