--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Sharif University of Technology, BS in Computer Engineering</h2>
         <ul>
         <li>Sept 2020 – May 2025</li>
-        <li>GPA: 19.77/20.0 (4.0/4.0) (<a href="https://edu.sharif.edu/v/99101835/4226F13ACC2878C6C67AF440841A8457/pdf">Transcript</a>)</li>
+        <li>GPA: 19.77/20.0 (4.0/4.0)</li>
         <li>Ranked in the Top 3 out of 192 students</li>
         </ul>
         <h2>Allame Helli 10 High School, Diploma in Mathematics and Physic</h2>
